--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,10 +36,10 @@ jobs:
     steps:
     - name: Set Variables on Success
       if: success()
-      run: echo "COLOR=green" >> $GITHUB_ENV && echo "TEXT=Successfully" >> $GITHUB_ENV
+      run: echo "COLOR=good" >> $GITHUB_ENV && echo "TEXT=Successfully" >> $GITHUB_ENV
     - name: Set Variables on Fail
       if: failure()
-      run: echo "COLOR=red" >> $GITHUB_ENV && echo "TEXT=Fail" >> $GITHUB_ENV
+      run: echo "COLOR=danger" >> $GITHUB_ENV && echo "TEXT=Fail" >> $GITHUB_ENV
     - name: Set COMMIT_MESSAGE
       run: echo "COMMIT_MESSAGE=${{ github.event.head_commit.message }}" >> $GITHUB_ENV
     - name: Slack Notification
