--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,18 +27,52 @@ jobs:
         if: ${{ github.event.inputs.status == 'fail' }}
         run: exit 1
         
-  slack-notify:
-    name: Slack Notify
+  slack-notify-success:
+    name: Slack Notify on success
     runs-on: ubuntu-latest
     timeout-minutes: 5
     needs: [job-1, job-2]
-    if: success() || failure()
+    if: success()
     steps:
     - name: Set Variables on Success
-      if: success()
       run: echo "COLOR=good" >> $GITHUB_ENV && echo "TEXT=Successfully" >> $GITHUB_ENV
-    - name: Set Variables on Fail
-      if: failure()
+    - name: Set COMMIT_MESSAGE
+      run: echo "COMMIT_MESSAGE=${{ github.event.head_commit.message }}" >> $GITHUB_ENV
+    - name: Slack Notification
+      uses: tokorom/action-slack-incoming-webhook@main
+      env:
+        INCOMING_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      with:
+        text: ${{env.TEXT}} automated deployment.
+        attachments: |
+          [
+            {
+              "color": "${{env.COLOR}}",
+              "fields": [
+                {
+                  "title": "Commit Message",
+                  "value": "${{ env.COMMIT_MESSAGE }}"
+                },
+                {
+                  "title": "GitHub Actions URL",
+                  "value": "https://github.com/Nishikoh/actions-practice/actions/runs/${{ github.run_id }}"
+                },
+                {
+                  "title": "Workflow Name",
+                  "value": "${{ github.workflow }}"
+                }
+              ]
+            }
+          ]
+          
+  slack-notify-fail:
+    name: Slack Notify on Failure
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    needs: [job-1, job-2]
+    if: failure()
+    steps:
+    - name: Set Variables on Success
       run: echo "COLOR=danger" >> $GITHUB_ENV && echo "TEXT=Fail" >> $GITHUB_ENV
     - name: Set COMMIT_MESSAGE
       run: echo "COMMIT_MESSAGE=${{ github.event.head_commit.message }}" >> $GITHUB_ENV
@@ -59,7 +93,7 @@ jobs:
                 },
                 {
                   "title": "GitHub Actions URL",
-                  "value": "${{ github.event.repository.url }}/actions/runs/${{ github.run_id }}"
+                  "value": "https://github.com/Nishikoh/actions-practice/actions/runs/${{ github.run_id }}"
                 },
                 {
                   "title": "Workflow Name",
@@ -68,3 +102,4 @@ jobs:
               ]
             }
           ]
+
