--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -63,7 +63,8 @@ jobs:
                 },
                 {
                   "title": "Input Variables",
-                  "value": "status: ${{ github.event.inputs.status }} \n foobar"
+                  "value": "status: ${{ github.event.inputs.status }} \n
+                            foobar"
                 }
               ]
             }
